--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,2 @@
-<button *ngIf="!sharing" (click)="startScreenShare()">Share Screen</button>
-<video id="preview" [srcObject]="mediaStream" [muted]="true" [controls]="true"></video>
+<button *ngIf="!mediaStream" (click)="startScreenShare()">Share Screen</button>
+<video *ngIf="mediaStream" [srcObject]="mediaStream" [muted]="true" [controls]="true"></video>
